# masubi

./: CURSOR_PLAN.md  README.md  annotation_rubric.md  dashboard.py  pyproject.toml  run_loop.py  setup.sh  starting_train_stage2.py  train.py  train_stage1_archive.py
autotrust/: __init__.py  config.py  data.py  eval.py  freeze.py  inference.py  observe.py  schemas.py  student.py
autotrust/dashboard/: charts.py  data_loader.py  git_history.py  log_formatter.py  run_manager.py
autotrust/providers/: __init__.py  anthropic.py  hyperbolic.py
docs/: 10min.md  GPT_REVIEW.md  INITIAL_DESIGN_CHOICES.md  INITIAL_REQUIREMENTS.md  REDESIGN_AUTOSEARCH.md  REDESIGN_AUTOSEARCH_TRD.md  SIMPLE.md  WHY_DIFFERENT_THAN_AUTORESEARCH.md.changes
docs/AUTOTRUST_V35_ISSUES/: AUTOTRUST_V35_ISSUE_001.md  AUTOTRUST_V35_ISSUE_002.md  AUTOTRUST_V35_ISSUE_003.md  AUTOTRUST_V35_ISSUE_004.md  AUTOTRUST_V35_ISSUE_005.md  AUTOTRUST_V35_ISSUE_006.md  AUTOTRUST_V35_ISSUE_007.md  AUTOTRUST_V35_ISSUE_008.md  AUTOTRUST_V35_ISSUE_009.md  AUTOTRUST_V35_ISSUE_010.md  AUTOTRUST_V35_ISSUE_011.md  AUTOTRUST_V35_ISSUE_012.md  AUTOTRUST_V35_ISSUE_013.md  AUTOTRUST_V35_ISSUE_014.md  AUTOTRUST_V35_ISSUE_015.md
docs/REDESIGN_AUTOSEARCH_TRD_TASKS/: TASK_001.md  TASK_002.md  TASK_003.md  TASK_004.md  TASK_005.md  TASK_006.md  TASK_007.md  (+5 more)
gold_set/: gold_chains.jsonl
tests/: test_charts.py  test_composite_metric.py  test_dashboard_integration.py  test_data_loader.py  test_inference.py  test_log_formatter.py  test_observe.py  test_run_loop.py  test_run_manager.py  test_smoke.py  test_stage_transition.py
(+57 files in other folders)
